--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,10 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "ahale@aaronmhale.com"
+  facebook: aaronmhale
+  github: halaar
+  twitter: halaar
   rss: true
 #  reddit: yourname
 #  linkedin: daattali
@@ -68,7 +68,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "aaronmhale.com"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
